<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rl"
    tools:context=".activities.AddReminderActivity"
    android:background="@drawable/reminder_bg">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/ll_reminder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:hint="@string/reminder_desc"
                android:layout_weight="1"
                android:layout_margin="8dp"
                android:background="@drawable/edittext_rounded_corners">
                <EditText
                    android:id="@+id/etReminderName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/start_time"
                    android:layout_weight="1"
                    android:layout_margin="8dp"
                    android:background="@drawable/edittext_rounded_corners">
                    <EditText
                        android:id="@+id/etStartTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:inputType="none"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/end_time"
                    android:layout_weight="1"
                    android:layout_margin="8dp"
                    android:background="@drawable/edittext_rounded_corners">
                    <EditText
                        android:id="@+id/etEndTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:inputType="none"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lat"
                android:layout_margin="8dp"
                android:background="@drawable/edittext_rounded_corners">
                <EditText
                    android:id="@+id/etLat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:textColor="@android:color/black"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lng"
                android:layout_margin="8dp"
                android:background="@drawable/edittext_rounded_corners">
                <EditText
                    android:id="@+id/etLng"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:textColor="@android:color/black"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/loc"
                android:layout_margin="8dp"
                android:background="@drawable/edittext_rounded_corners">
                <EditText
                    android:id="@+id/etLocName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:textColor="@android:color/black"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dist"
                android:layout_margin="8dp"
                android:background="@drawable/edittext_rounded_corners">
                <EditText
                    android:id="@+id/etDistance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:text="@string/defaultDistance"
                    android:textColor="@android:color/black"/>
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_margin="8dp"
                    android:background="@drawable/edittext_rounded_corners">
                    <RadioButton
                        android:id="@+id/rb_in"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/in"
                        android:checked="true"
                        android:textColor="@android:color/black"/>

                    <RadioButton
                        android:id="@+id/rb_out"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/out"
                        android:textColor="@android:color/black"/>
                </RadioGroup>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="8dp"
                    android:background="@drawable/edittext_rounded_corners"
                    android:orientation="vertical">
                    <RadioButton
                        android:id="@+id/rb_onlyOnce"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/onlyOnce"
                        android:checked="true"
                        android:textColor="@android:color/black"/>

                    <RadioButton
                        android:id="@+id/rb_oncePerDay"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/once"
                        android:checked="true"
                        android:textColor="@android:color/black"/>

                    <RadioButton
                        android:id="@+id/rb_everytime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/everytime"
                        android:textColor="@android:color/black"/>
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="8dp"
                android:gravity="center">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/item"
                    android:background="@drawable/edittext_rounded_corners">
                    <EditText
                        android:id="@+id/etAddItem"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btnAddItem"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:text="@string/add_item"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:background="@drawable/edittext_rounded_corners"/>
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="70dp"/>
        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/add_button"/>
</RelativeLayout>